--- a/public/index.html
+++ b/public/index.html
@@ -287,7 +287,7 @@
 					<div class="row contact-holder">
 						<div class="col-xs-12 col-sm-4 text-center">
 							<h2 class="heading2">Hotline</h2>
-							<a class="sub-title" href="tell:(00)123456789">(00) 123 456 789</a>
+							<a class="sub-title" href="tell:(00)123456789">08119487489</a>
 						</div>
 						<div class="col-xs-12 col-sm-4 text-center l-bdr">
 							<h2 class="heading2">We’re Open</h2>
